--- a/composer.json
+++ b/composer.json
@@ -1,17 +1,31 @@
 {
-    "name": "deg540/lista-de-la-compra",
-    "description": "lista-de-la-compra",
-    "type": "project",
-    "require-dev": {
-        "phpunit/phpunit": "^9.5"
-    },
-    "autoload": {
-        "psr-4": {
-            "Deg540\\DockerPHPBoilerplate\\": "src",
-            "Deg540\\DockerPHPBoilerplate\\Test\\": "tests"
-        }
-    },
-    "require": {
-        "php": "^8.1"
+  "name": "deg540/kata-de-nota",
+  "description": "Kata paranota",
+  "type": "project",
+  "require": {
+    "php": "^8.2"
+  },
+  "require-dev": {
+    "phpunit/phpunit": "^9.3.10"
+  },
+  "minimum-stability": "stable",
+  "prefer-stable": true,
+  "autoload": {
+    "psr-4": {
+      "Deg540\\KataDeNota\\": "src/"
     }
+  },
+  "autoload-dev": {
+    "psr-4": {
+      "Deg540\\KataDeNota\\Test\\": "tests/"
+    }
+  },
+  "config": {
+    "optimize-autoloader": true
+  },
+  "scripts": {
+    "test": [
+      "phpunit --configuration phpunit.xml"
+    ]
+  }
 }
